update youtube to use g-app and fix styling on safari.

--- a/youtube/src/yt-app.css
+++ b/youtube/src/yt-app.css
@@ -1,10 +1,5 @@
-@host {
-  font-family: 'Helvetica Neue', Helvetica, Arial, 'open sans', sans-serif;
-  display: -webkit-flex;
-  height: 100%;
-}
-
 g-panels {
+  -webkit-box-flex: 1;
   -webkit-flex: 1;
   min-height: 0;
   -webkit-user-select: none;
@@ -27,14 +22,18 @@ g-panels > * {
 
 #videoPanel {
   width: 100%;
+  display: -webkit-box;
   display: -webkit-flex;
+  -webkit-box-orient: vertical;
   -webkit-flex-flow: column;
   background: whitesmoke;
 }
 
 #listPanel {
   width: 260px;
+  display: -webkit-box;
   display: -webkit-flex;
+  -webkit-box-orient: vertical;
   -webkit-flex-flow: column;
   font-size: 14px;
   background: whitesmoke;
@@ -50,6 +49,7 @@ g-panels > * {
 }
 
 .list {
+  -webkit-box-flex: 1;
   -webkit-flex: 1;
   display: block;
   /*
@@ -62,6 +62,7 @@ g-panels > * {
 }
 
 input {
+  -webkit-box-flex: 1;
   -webkit-flex: 1;
   -webkit-appearance: none;
   background: whitesmoke;
@@ -89,6 +90,7 @@ input {
 }
 
 .list {
+  -webkit-box-flex: 1;
   -webkit-flex: 1;
   min-height: 0;
   overflow: auto;
@@ -111,7 +113,9 @@ input {
 }
 
 .toolbar {
+  display: -webkit-box;
   display: -webkit-flex;
+  -webkit-box-align: center;
   -webkit-align-items: center;
   border-bottom: 1px solid #ccc;
   min-height: 60px;
@@ -123,12 +127,15 @@ input {
 
 .toolbar-title {
   text-align: center;
+  -webkit-box-flex: 1;
   -webkit-flex: 1;
   min-height: 0;
 }
 
 yt-video {
+  -webkit-box-flex: 1;
   -webkit-flex: 1;
+  display: block;
   min-height: 0;
 }
 
